Update z-index to ensure that the navbar is always on top

--- a/src/components/organisms/Navbar/Navbar.scss
+++ b/src/components/organisms/Navbar/Navbar.scss
@@ -11,6 +11,7 @@
   top: 0;
   width: 100%;
   font-size: 1.25rem;
+  z-index: 100;
 
   &__title {
     font-size: 1.25rem;
